--- a/app/views/components/_navbar.html.slim
+++ b/app/views/components/_navbar.html.slim
@@ -30,7 +30,7 @@
           a.nav-link.dropdown-toggle href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
             | Reportes
           div.dropdown-menu aria-labelledby="navbarDropdown"
-            = link_to 'Ventas', '#', class: 'dropdown-item'
+            = link_to 'Actividades', reports_activities_path, class: 'dropdown-item'
             = link_to 'Cobranza', '#', class: 'dropdown-item'
             .dropdown-divider
             = link_to 'Some', '#', class: 'dropdown-item'
