--- a/app/views/invoices/_form_fields.html.slim
+++ b/app/views/invoices/_form_fields.html.slim
@@ -44,9 +44,9 @@
       = f.number_field :balance, class: 'form-control', disabled: true
 
   .form-group.row
-    = f.label :expiration_date, class: 'col-sm-2 col-form-label'
+    = f.label :payment_date, class: 'col-sm-2 col-form-label'
     .col-sm-10
-      = f.date_select :expiration_date, class: 'form-control', disabled: true
+      = f.date_select :payment_date, class: 'form-control', disabled: true
 
 .form-group.row
   = f.label :status, class: 'col-sm-2 col-form-label'
