--- a/app/views/components/_navbar.html.slim
+++ b/app/views/components/_navbar.html.slim
@@ -32,6 +32,7 @@
           div.dropdown-menu aria-labelledby="navbarDropdown"
             = link_to 'Actividades', reports_activities_path, class: 'dropdown-item'
             = link_to 'Cobranza', reports_debts_path, class: 'dropdown-item'
+            = link_to 'Cobranza Tablas', reports_debts_table_index_path, class: 'dropdown-item'
             .dropdown-divider
             = link_to 'Some', '#', class: 'dropdown-item'
 
