added payment report

--- a/app/views/components/_navbar.html.slim
+++ b/app/views/components/_navbar.html.slim
@@ -33,6 +33,7 @@
             = link_to 'Actividades', reports_activities_path, class: 'dropdown-item'
             = link_to 'Cobranza', reports_debts_path, class: 'dropdown-item'
             = link_to 'Cobranza Tablas', reports_debts_table_index_path, class: 'dropdown-item'
+            = link_to 'Pagos', reports_payments_path, class: 'dropdown-item'
             .dropdown-divider
             = link_to 'Some', '#', class: 'dropdown-item'
 
