--- a/app/views/invoices/activities/calls/_call.html.slim
+++ b/app/views/invoices/activities/calls/_call.html.slim
@@ -18,7 +18,7 @@
       .col-md-4
         - if call.task?
           p Fecha Vencimiento: #{call.date_task}
-          p Estado: #{call.status}
+          p Estado: #{ t("activity.status.pending") }
       .col-md-4
         p 
           | Factura: 
