--- a/app/views/thirds/_form_fields.html.slim
+++ b/app/views/thirds/_form_fields.html.slim
@@ -1,29 +1,29 @@
 .form-group.row
-  = f.label :identification, class: 'col-sm-2 col-form-label'
+  = f.label t('third.identification'), class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_field :identification, class: 'form-control'
 
 .form-group.row
-  = f.label :name, class: 'col-sm-2 col-form-label'
+  = f.label t('third.name'), class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_field :name, class: 'form-control'
 
 .form-group.row
-  = f.label :email, class: 'col-sm-2 col-form-label'
+  = f.label t('third.email'), class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_field :email, class: 'form-control'
 
 .form-group.row
-  = f.label :cellphone, class: 'col-sm-2 col-form-label'
+  = f.label t('third.cellphone'), class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_field :cellphone, class: 'form-control'
 
 .form-group.row
-  = f.label :phone, class: 'col-sm-2 col-form-label'
+  = f.label t('third.phone'), class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_field :phone, class: 'form-control'
 
 .form-group.row
-  = f.label :address, class: 'col-sm-2 col-form-label'
+  = f.label t('third.address'), class: 'col-sm-2 col-form-label'
   .col-sm-10
     = f.text_field :address_description, class: 'form-control'
