--- a/app/views/invoices/sales/_sale.html.slim
+++ b/app/views/invoices/sales/_sale.html.slim
@@ -11,3 +11,5 @@
       | Fecha creación: #{sale.creation}
       br
       | Vencimiento: #{sale.expiration}
+      br
+      | Fecha Proximo Pago: #{sale.payment_date}
