--- a/app/views/user_notification_mailer/access_granted.txt.erb
+++ b/app/views/user_notification_mailer/access_granted.txt.erb
@@ -1,2 +1,4 @@
 hola <%= @user.name %>
-Su cuenta ha sido verificada exitosamente, ahora pude dirigirse a la pagina y loguearse.
+
+Su cuenta ha sido creada exitosamente,
+para loguearse debe esperar que su cuenta sea verificada.
