--- a/app/views/user_notification_mailer/access_granted.html.erb
+++ b/app/views/user_notification_mailer/access_granted.html.erb
@@ -1,3 +1,3 @@
-hola <%= @user.name %>
+hola <%= @enterprise.name %>
 <br>
 Su cuenta ha sido verificada exitosamente, ahora pude dirigirse a la pagina y loguearse.
