--- a/app/views/user_notification_mailer/new_register.html.erb
+++ b/app/views/user_notification_mailer/new_register.html.erb
@@ -1,3 +1,3 @@
-hola <%= @user.name %>
+hola <%= @enterprise.name %>
 <br>
 Su cuenta ha sido creada exitosamente, para loguearse debe esperar que su cuenta sea verificada.
