--- a/app/views/user_notification_mailer/new_register.text.erb
+++ b/app/views/user_notification_mailer/new_register.text.erb
@@ -1,4 +1,4 @@
-hola <%= @user.name %>
+hola <%= @enterprise.name %>
 
 Su cuenta ha sido creada exitosamente,
 para loguearse debe esperar que su cuenta sea verificada.
