--- a/app/views/components/_navbar.html.slim
+++ b/app/views/components/_navbar.html.slim
@@ -1,8 +1,10 @@
 - if current_user
   .navbar.navbar-expand-lg.navbar-light.bg-light
     a.navbar-brand href="/"
-      = "Antuby" unless @enterprise.logo?
-      = (image_tag(@enterprise.logo.small_thumb.url, alt: 'Logo')) if @enterprise.logo?
+      - if @enterprise.logo?
+        = (image_tag(@enterprise.logo.small_thumb.url, alt: 'Logo'))
+      - else
+        | Antuby
 
     button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
       span.navbar-toggler-icon
