--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,28 +1,36 @@
-h2 Registrate
+br
+br
+= image_tag('logo_index.png', alt: 'Logo', width: "300", class: 'mx-auto d-block')
+br
+.card.col-md-6.offset-md-3
+  .card-body
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  
-  .form-group.row
-    = f.label 'Nombre de la empresa', class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.text_field :enterprise_name, autofocus: true, autocomplete: 'email', class: 'form-control'
+    h2 ( class= "text-center") Registrate
 
-  .form-group.row
-    = f.label :email_field, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = render "devise/shared/error_messages", resource: resource
 
-  .form-group.row
-    = f.label :password, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.password_field :password, autocomplete: "new-password", class: 'form-control'
+      .form-group.row
+        = f.label 'Nombre de la empresa', class: 'col-sm-3 col-form-label'
+        .col-sm-9
+          = f.text_field :enterprise_name, autofocus: true, autocomplete: 'email', class: 'form-control'
 
-  .form-group.row
-    = f.label :password_confirmation, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+      .form-group.row
+        = f.label :email_field, class: 'col-sm-3 col-form-label'
+        .col-sm-9
+          = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
 
-  .actions
-    = f.submit 'Registrarme', class: 'btn btn-primary'
-    = link_to 'atras', new_user_session_path
+      .form-group.row
+        = f.label :password, class: 'col-sm-3 col-form-label'
+        .col-sm-9
+          = f.password_field :password, autocomplete: "new-password", class: 'form-control'
+
+      .form-group.row
+        = f.label :password_confirmation, class: 'col-sm-3 col-form-label'
+        .col-sm-9
+          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+
+      .actions
+        .d-flex.justify-content-between
+          = f.submit 'Registrarme', class: 'btn btn-primary'
+          = link_to 'atras', new_user_session_path, class: 'btn btn-primary'
