--- a/app/views/invoices/sales/_sale.html.slim
+++ b/app/views/invoices/sales/_sale.html.slim
@@ -12,4 +12,4 @@
       br
       | Vencimiento: #{sale.expiration}
       br
-      | Fecha Proximo Pago: #{sale.payment_date}
+      | Fecha Proximo Pago: #{sale.next_payment}
