--- a/app/views/invoices/activities/emails/_form.html.slim
+++ b/app/views/invoices/activities/emails/_form.html.slim
@@ -20,6 +20,6 @@
                               { class: 'form-control' }
                     
         .input-group-append
-          //= link_to 'Nuevo', new_invoices_sale_activities_contact_path(@sale), class: 'btn btn-outline-primary', remote: true
+          = link_to 'Nuevo', new_invoices_sale_activities_contact_path(@sale), class: 'btn btn-outline-primary', remote: true
 
   = f.submit 'Guardar', class: 'btn btn-primary'
